# datathon-robinreal-challenge

./: .gitignore  GPU_HANDOFF.md  README.md  bm25_retrieval.py  eval_configs_results.json  eval_ranking.py  precompute_geo_features.py  run_harness_queries.py  search.py  serve.py  test_queries.py
conversation_results/: summary.json  turn1_cards.md  (+5 more)
final_submission/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  aws.md  challenge.md  docker-compose.yml  pyproject.toml  serve.py
final_submission/.claude/: settings.json
final_submission/app/: __init__.py  config.py  main.py  test_data.py
final_submission/app/api/routes/: listings.py
final_submission/app/core/: claude.py
final_submission/app/harness/: bootstrap.py
final_submission/app/models/: __init__.py
final_submission/app/participant/: __init__.py  hard_fact_extraction.py  listing_row_parser.py  soft_fact_extraction.py  soft_filtering.py
final_submission/apps_sdk/: __init__.py
final_submission/apps_sdk/server/: __init__.py  widget.py
final_submission/apps_sdk/web/: index.html  package-lock.json  package.json
final_submission/apps_sdk/web/src/: main.tsx  styles.css
final_submission/infra/: .env.example  requirements.txt
final_submission/infra/app/: __init__.py  api.py  mcp_stdio.py  orchestrator.py  pipeline_client.py  profile_manager.py  schemas.py
final_submission/test-queries/: long_queries.md  queries_de.md  queries_en.md
final_submission/tests/: test_apps_sdk_files.py  test_apps_sdk_server.py  test_bootstrap.py  test_mcp_smoke.py  test_runtime_files.py  test_schemas.py
(+54 files in other folders)
